# modern-graphics-engine

./: .clang-format  .gitattributes  .gitignore  CMakeCache.txt  CMakeLists.txt  DEBUG_GUIDE.md  LICENSE  Makefile  README.md  cmake_install.cmake
.github/workflows/: cmake-single-platform.yml
bin_testing/: engine_testing
src/: main.cpp
src/2d/: main.cpp
src/2d/ik_math/: ik_solver.cpp  ik_solver.hpp
src/3d/: CMakeLists.txt  Makefile  fabrik_opengl  fabrik_vulkan  line.vert.spv  main.cpp  vert.spv
src/ik_math/: ik_solver.cpp  ik_solver.hpp
src/libs/glad/: CMakeLists.txt
src/libs/glad/src/: glad.c
src/production/: main.cpp
src/production/glad/include/glad/: glad.h
src/production/shaders/: fragment.fs
src/production/utils/: shader.hpp
src/shaders/: cube_gl.vert  line.frag  line.vert  lit.frag  lit.vert  point.frag  point.vert  vert.vert
src/testing/: main.cpp
src/utils/: CMakeLists.txt  gl_debug.hpp  logger.hpp  mesh.cpp  mesh.hpp  object.cpp  object.hpp  opengl_app.cpp  opengl_app.hpp  render_object.cpp  render_object.hpp  shader.cpp  shader.hpp  transform.cpp  transform.hpp
src/utils/obj_loader/: CMakeLists.txt  gltfLoaderTiny.cpp  gltfLoaderTiny.hpp
src/utils/primitives/: CMakeLists.txt  cube.cpp  cube.hpp  sphere.cpp  sphere.hpp
